--- a/src/assets/sass/layouts/_instagram-grid.scss
+++ b/src/assets/sass/layouts/_instagram-grid.scss
@@ -7,6 +7,7 @@
 }
 
 .insta-grid__gallery {
+  margin-top: 50px;
   display: grid;
 }
 
